<resources>

    <!-- MAIN ACTIVITY DEBUT -->
    <string name="app_name">ColorBall</string>
    <string name="play_button">Jouer</string>
    <string name="level_button">Les niveaux</string>
    <string name="shop_button">Magasin</string>
    <string name="rule_button">Les règles</string>
    <string name="quit_button">Quitter</string>
    <string name="author">BOUKHEBZA Allan</string>
    <string name="confirm_quit">Voulez-vous vraiment quitter le jeu ?</string>
    <string name="quit_title">Quitter</string>
    <!-- MAIN ACTIVITY FIN -->

    <!--LEVEL ACTIVITY DEBUT -->
    <string name="title_activity_level">LevelActivity</string>
    <string name="return_button">Retour</string>
    <!--LEVEL ACTIVITY FIN -->

</resources>
